--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "illuminate/console": ">=5.7",
-        "illuminate/support": ">=5.7"
+        "php": "^8.2",
+        "illuminate/console": ">=11.0",
+        "illuminate/support": ">=11.0"
     },
     "require-dev": {
-        "laravel/framework": ">=5.7",
-        "phpunit/phpunit": "^7.0"
+        "laravel/framework": ">=11.0",
+         "phpunit/phpunit": ">=11.0"
     },
     "autoload": {
         "psr-4": {
